# bridgebot

./: .gitignore  LICENSE  MODULE.bazel  README.md  build.py  pyproject.toml  setup.py
bridgebot/: Attention.ipynb  BUILD.bazel  app.py  attention_backtracing.py  bert_config.json  bert_tools.py  bridgebot_config_nano.json  count_players.py  enumerate_optimal_play.py  evaluate.py  examples_grep.py  foo.csv  go.mod  go.sum  inference.py  inference_test.py  learnings  lin_records.py  lin_test.py  mubert_bench.py  neo4j_query  record_benchmarks.py  requirements.txt  setup.py  simulate.py  simulate_test.py  smoke_test.sh  tf1-to-2.sed  tokens_test.py  tpu.py  tpudata.py  tpudata_test.py  train.py
bridgebot/benchdata/in/: bridgebot_config_tiny.json
bridgebot/bridge/: BUILD.bazel  game.py  tokens.py
bridgebot/bridge/doc/: app.md  feedback.md  literature.md
bridgebot/bridge/fastgame/: BUILD.bazel  __init__.py  fastgame.c  optimization_log.md  pyproject.toml  setup.py  wrapper.py  wrapper_test.py
bridgebot/bridge/fastgame/fastgame.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bridgebot/config/: 7.lookahead-5.json
bridgebot/config/0/: mubert-config-small-short-dyn.json  mubert-config-small-short-pred.json  mubert-config-small-short-rep.json  mubert-config-small-tall-dyn.json  mubert-config-small-tall-pred.json  mubert-config-small-tall-rep.json  mubert-config-small.json
bridgebot/config/1/: 1.sm-23.json  2.sm-32.json  3.sm-22.json  4.sm-9-heads.json  5.sm-96-dim.json  6.sm-4-layers.json
bridgebot/config/2/: 2.0.smp.json  2.1.smp-2dyn.json  2.2.smp-4dyn.json  2.3.smp-12rp.json
bridgebot/corpus/: archive_scraped_to_corpus.py  bridge_categories  html2sentences.py  wiki_extract_to_corpus.py
bridgebot/corpus/wikiextract/: BUILD.bazel  extract.go
bridgebot/doubledummy/: design.md
bridgebot/inference_pipe/: BUILD.bazel  main.go
bridgebot/inference_pipe/fakeinfer/: BUILD.bazel  main.go
bridgebot/inference_pipe/fakesim/: BUILD.bazel  main.go
bridgebot/mubert/: BUILD.bazel  modeling.py  modeling_test.py  mubert.py  toptokens.py
bridgebot/ncard/: BUILD.bazel  bigtoy.md  chords.py  chords_test.py  dims.py  dims_test.py  experiment.py  game.py  game_test.py  games.reason  infer.py  inference.py  kg.py  kg_test.py  model.md  model.py  rgeom.py  rgeom_test.py  simulate.py  training_pipeline.py
bridgebot/ncard/2card/: 2card.reason
bridgebot/ncard/config/: c0a.py  c0b.py  c0base.py  c0f.py  d0base.py
bridgebot/ncard/onecard/: 1card.reason  analyze.py  analyze_test.py  dealgen-design.md  inference.py  model.py  optimal_kg.py  optimal_kg_test.py  optimal_player_testing.py
bridgebot/ncard/onecard/meta/: agenda.md  analysis1.md
bridgebot/ncard/step2a/: manifest.gv
bridgebot/ncard/step2a/outlinetool/: kg.go
bridgebot/ncard/step2b/: graph-types.ipynb  search.ipynb
bridgebot/ncard/step2c/: bridge.ipynb
bridgebot/ncard/step2d/: debug_lin_file.py  explore.ipynb  outlinetool.ipynb
bridgebot/pb/: BUILD.bazel  alphabridge.proto  alphabridge_pb2.py  alphabridge_pb2_grpc.py
bridgebot/perplexity/: baseline.py  concat.py  scrape.py
bridgebot/playerid/: classify.py
bridgebot/replay_buffer/: BUILD.bazel  replay_buffer.go
bridgebot/replay_buffer/test/: smoke_test.py  stress.py
bridgebot/scaffold/: dims.py  dims_test.py  evaluate_fsa.py  fsa.py  tree.py
bridgebot/scaffold/perceiver/: datasource.py  dims_perceiver.py  dims_perceiver_test.py  experiment.py
bridgebot/scaffold/perceiver/config/: 0a.py  0b.py  0base.py  0c.py  0d.py  0e.py  0f.py  0g.py  0h.py  1a.py  1b.py  1base.py  1c.py  1d.py  1e.py  1f.py  1g.py  c0a.py  c0base.py  c1a.py  c2a.py  c3a.py
bridgebot/scaffold/perceiver/doc/: architecture.md  back_of_envelope.md
bridgebot/scaffold/perceiver/perceiver/: io_processors.py  perceiver.py
bridgebot/scaffold/perceiver/perceiver/train/: dataset.py
bridgebot/scripts/: BUILD.bazel  board_viewer.py  generate_protos.sh  get_vugraph.py  keep_models.py  lin_to_corpus.sh  nano_profile.sh  nano_simulate.sh  nano_simulate_tpu.sh  perceiver_setup.sh  rb_board_viewer.py  rl-train.lines.sh  roberta_experiment.py  run_eval.sh  run_supervised_training.sh  sim-lines.sh  toy_top.sh  train_perceiver.sh  training_commands
bridgebot/training_pipeline/: BUILD.bazel  __init__.py  training_pipeline.py
bridgebot/x/wikimedia/: BUILD  commands  getarticles.py  hashtable.go  hashtable_test.go  linkurl.go  linkurl_test.go  lrl.pl  pageix2tables.cc  pagelex.go  pagelex_test.go  scratch-gi.txt  scratch.txt
bridgebot/x/wikimedia/testdata/: dumpstatus.json
bridgebot/x/wikimedia/testdata/otherwiki/: enwikisample-pages-articles1.xml-p7686p97696  enwikisample-pages-articles99.xml-p77p88
bridgebot/x/wikimedia/testdata/tstwiki/: tstwiki.xml
