[tool.poetry]
name = "bridgebot"
version = "0.1.0"
description = "A bot for the game of bridge."
authors = ["Nathaniel Thurston <njt@ipvive.cm>"]
packages = [
    { include = "bridgebot" }
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.6.9"
absl-py = "^0.12.0"

[tool.poetry.dev-dependencies]
nltk = "^3.5"
ipykernel = "^5.3.4"
networkx = "^2.5"
ampligraph = "^1.3.2"
plotly = "^4.9.0"
psutil = "^5.7.2"
nbformat = "^5.0.7"
matplotlib = "^3.3.1"
tensorflow = "^2.3.1"
pydot = "^1.4.1"
params-flow = "^0.8.2"
cython = "^0.29.21"
coverage = "^5.3"
pycodestyle = "^2.6.0"
nose = "^1.3.7"
nose-exclude = "^0.5.0"
html2text = "^2020.1.16"
setuptools = "^51.1.1"
tensorflow-datasets = "^4.2.0"
apache-beam = {extras = ["gcp"], version = "^2.27.0"}
bertviz = "^1.0.0"
jupyterlab = "*"
ipywidgets = "*"
grpcio = "*"
protobuf = "*"
six = "*"
numpy = "*"

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

