[build-system]
requires = ["setuptools", "wheel", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "bridgebot"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "nltk",
    "ipykernel",
    "networkx",
    "ampligraph",
    "plotly",
    "psutil",
    "nbformat",
    "matplotlib",
    "tensorflow",
    "pydot",
    "params-flow",
    "cython",
    "coverage",
    "pycodestyle",
    "nose",
    "nose-exclude",
    "html2text",
    "setuptools",
    "tensorflow-datasets",
    "apache-beam[gcp]",
    "bertviz",
    "jupyterlab",
    "ipywidgets",
    "grpcio",
    "protobuf",
    "six",
    "numpy",
]
