load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "inference_pipe_lib",
    srcs = ["main.go"],
    importpath = "ipvive/bridgebot/inference_pipe",
    visibility = ["//visibility:public"],
    deps = [
        "//bridgebot/pb",
        "@com_github_golang_protobuf//proto:go_default_library",
        "@com_github_prometheus_client_golang//prometheus",
        "@com_github_prometheus_client_golang//prometheus/promauto",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials",
    ],
)

go_binary(
    name = "inference_pipe",
    embed = [":inference_pipe_lib"],
    visibility = ["//visibility:public"],
)
