load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "wikiextract_lib",
    srcs = ["extract.go"],
    importpath = "ipvive/bridgebot/corpus/wikiextract",
    visibility = ["//visibility:private"],
    deps = ["//x/wikimedia:go_default_library"],
)

go_binary(
    name = "wikiextract",
    embed = [":wikiextract_lib"],
    visibility = ["//visibility:public"],
)
